--- a/src/main/resources/showPostAdminController.fxml
+++ b/src/main/resources/showPostAdminController.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -16,7 +15,7 @@
             <DropShadow color="#9a9696" />
         </effect>
         <children>
-            <ImageView fitHeight="44.0" fitWidth="60.0" layoutX="24.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="44.0" fitWidth="60.0" layoutX="24.0" layoutY="25.0" onMouseClicked="#handleSaveFile" pickOnBounds="true" preserveRatio="true">
                 <image>
                     <Image url="https://static.vecteezy.com/system/resources/previews/023/234/824/non_2x/pdf-icon-red-and-white-color-for-free-png.png" />
                 </image>
@@ -29,6 +28,6 @@
         </children>
     </AnchorPane>
     <TextField fx:id="tfSearch" />
-        <AnchorPane layoutX="-1.0" layoutY="90.0" id="AnchorPane" fx:id="anchorPane" prefHeight="627.0" prefWidth="1038.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"> <!-- Contenu de votre AnchorPane --> </AnchorPane>
+        <AnchorPane id="AnchorPane" fx:id="anchorPane" layoutX="-1.0" layoutY="90.0" prefHeight="627.0" prefWidth="1038.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"> <!-- Contenu de votre AnchorPane --> </AnchorPane>
 
 </AnchorPane>
