--- a/src/main/resources/ajouterSponsoring.fxml
+++ b/src/main/resources/ajouterSponsoring.fxml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.collections.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="589.0" prefWidth="611.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.ajouterSponsoring">
+<AnchorPane prefHeight="589.0" prefWidth="1081.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.ajouterSponsoring">
     <children>
-        <Pane layoutX="98.0" layoutY="11.0" prefHeight="566.0" prefWidth="438.0" styleClass="eco-card" stylesheets="@style/styleafficher.css">
+        <Pane layoutX="98.0" layoutY="11.0" prefHeight="566.0" prefWidth="898.0" styleClass="" stylesheets="@style/stylesheet.css">
             <children>
-                <VBox alignment="CENTER" layoutX="27.0" layoutY="11.0" prefHeight="539.0" prefWidth="384.0" spacing="10">
+                <VBox alignment="CENTER" layoutX="27.0" layoutY="11.0" prefHeight="539.0" prefWidth="835.0" spacing="10">
                     <children>
                         <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Add sponsoring" />
                         <TextField fx:id="nameField" prefHeight="21.0" prefWidth="384.0" promptText="Nom" styleClass="search-box">
@@ -20,13 +28,13 @@
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                             </padding>
                         </TextField>
-                  <Text fx:id="errorname" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
+                        <Text fx:id="errorname" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
                         <TextArea fx:id="descriptionArea" prefHeight="9.0" prefWidth="366.0" promptText="Description" styleClass="search-box">
                             <padding>
                                 <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
                             </padding>
                         </TextArea>
-                  <Text fx:id="errordescription" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="367.7367057800293" />
+                        <Text fx:id="errordescription" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="367.7367057800293" />
                         <VBox prefHeight="200.0" prefWidth="100.0">
                             <children>
                                 <HBox prefHeight="115.0" prefWidth="379.0">
