--- a/src/main/resources/dashbord.fxml
+++ b/src/main/resources/dashbord.fxml
@@ -20,14 +20,14 @@
             <children>
                 <Pane layoutX="30.0" layoutY="37.0" prefHeight="30.0" prefWidth="180.0" styleClass="labbtn">
                     <children>
-                        <Label alignment="CENTER" layoutX="41.0" layoutY="6.0" text="Upload New File" textFill="#2262c6">
+                        <Label alignment="CENTER"  onMouseClicked="#ajoutsponsor" layoutX="41.0" layoutY="6.0" text="Add New Sponsor" textFill="#2262c6">
                             <font>
                                 <Font name="Berlin Sans FB" size="14.0" />
                             </font>
                         </Label>
                     </children>
                 </Pane>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="122.0" onMouseClicked="#showsponsor" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="122.0"  prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -67,7 +67,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="185.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="185.0" prefHeight="30.0" onMouseClicked="#showsponsor" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -77,7 +77,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Shared with me" textFill="#a2bee8">
+                        <Label text="Sponsors List" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
@@ -87,7 +87,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="215.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="215.0" onMouseClicked="#showspostgroup"  prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -97,7 +97,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Recent" textFill="#a2bee8">
+                        <Label text="PostGroup List" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
@@ -107,7 +107,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="246.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="246.0"  onMouseClicked="#showcomment" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -117,7 +117,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Starred" textFill="#a2bee8">
+                        <Label text="Comentairepost List" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
