--- a/src/main/resources/style/styleafficher.css
+++ b/src/main/resources/style/styleafficher.css
@@ -8,13 +8,13 @@
 }
 
 .search-button{
-    -fx-background-color: #f8da46;
+    -fx-background-color: #468df8;
     -fx-background-radius: 30;
 
 }
 
 .image-button{
-    -fx-background-color: #f8da46;
+    -fx-background-color: #469ff8;
     -fx-background-radius: 30;
 
 }
@@ -34,7 +34,7 @@
 }
 
 .sponsor-button{
-    -fx-background-color: #f8da46;
+    -fx-background-color: #46a8f8;
     -fx-background-radius: 30;
 
 }
@@ -66,7 +66,7 @@
     -fx-background-color:#FFFFFF ;
 }
 .poste-button{
-    -fx-background-color: rgb(250, 151, 2);
+    -fx-background-color: rgb(2, 109, 250);
     -fx-background-radius: 30;
 
 }
@@ -123,11 +123,12 @@
 }
 .button {
     -fx-padding: 5px;
-    -fx-background-color: #fa7a02;
+    -fx-background-color: #faa345;
     -fx-text-fill: white;
     -fx-border-width: 1px;
     -fx-background-radius:30px ;
 }
+
 
 
 
@@ -140,3 +141,13 @@
     -fx-background-radius: 5px;
 }
 
+.grid-pane{
+    -fx-background-color: #000000;
+}
+
+.scroll-pane{
+    -fx-background-color: #000000;
+}
+.post-button{
+    -fx-background-color: #fa9702;
+}
