--- a/src/main/resources/dashbord.fxml
+++ b/src/main/resources/dashbord.fxml
@@ -16,18 +16,18 @@
 
 <AnchorPane id="AnchorPane" prefHeight="580.0" prefWidth="919.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.dashbord">
     <children>
-        <AnchorPane layoutX="-1.0" layoutY="74.0" prefHeight="722.0" prefWidth="240.0" styleClass="sidebar">
+        <AnchorPane layoutX="32.0" layoutY="65.0" prefHeight="722.0" prefWidth="240.0" styleClass="sidebar">
             <children>
                 <Pane layoutX="30.0" layoutY="37.0" prefHeight="30.0" prefWidth="180.0" styleClass="labbtn">
                     <children>
-                        <Label alignment="CENTER"  onMouseClicked="#ajoutsponsor" layoutX="41.0" layoutY="6.0" text="Add New Sponsor" textFill="#2262c6">
+                        <Label alignment="CENTER" layoutX="41.0" layoutY="6.0" onMouseClicked="#ajoutsponsor" text="Add New Sponsor" textFill="#2262c6">
                             <font>
                                 <Font name="Berlin Sans FB" size="14.0" />
                             </font>
                         </Label>
                     </children>
                 </Pane>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="122.0"  prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="122.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -67,7 +67,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="185.0" prefHeight="30.0" onMouseClicked="#showsponsor" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="185.0" onMouseClicked="#showsponsor" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -87,7 +87,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="215.0" onMouseClicked="#showspostgroup"  prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="215.0" onMouseClicked="#showspostgroup" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -107,7 +107,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="246.0"  onMouseClicked="#showcomment" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="246.0" onMouseClicked="#showcomment" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -127,7 +127,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="277.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" onMouseClicked="#showcategory" layoutX="31.0" layoutY="277.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -137,7 +137,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Trash" textFill="#a2bee8">
+                        <Label text="Category" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
@@ -147,7 +147,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="307.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" onMouseClicked="#showmarket"  layoutX="32.0" layoutY="307.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -157,7 +157,27 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Backups" textFill="#a2bee8">
+                        <Label text="Markets" textFill="#a2bee8">
+                            <font>
+                                <Font name="Cambria" size="14.0" />
+                            </font>
+                        </Label>
+                    </children>
+                    <padding>
+                        <Insets left="5.0" />
+                    </padding>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" onMouseClicked="#showvoucher"  layoutX="32.0" layoutY="333.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                    <children>
+                        <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@images/icons8_sync_settings_24px.png" />
+                            </image>
+                            <HBox.margin>
+                                <Insets right="10.0" />
+                            </HBox.margin>
+                        </ImageView>
+                        <Label text="Vouchers" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
