--- a/src/main/resources/Avertissement/ListAvertissement.fxml
+++ b/src/main/resources/Avertissement/ListAvertissement.fxml
@@ -4,44 +4,32 @@
 <?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@style.css" fx:controller="edu.esprit.controller.Avertissement.ListAvertissementController">
+<AnchorPane prefHeight="718.0" prefWidth="1145.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.Avertissement.ListAvertissementController">
 
    <children>
-      <fx:include source="/Dashboard.fxml"/>
-      <VBox layoutX="10.0" layoutY="50.0" prefHeight="600.0" prefWidth="160.0">
-         <children>
-            <!-- Ajoutez des éléments de dashboard ici -->
-         </children>
-      </VBox>
 
       <!-- Barre de recherche repositionnée pour s'adapter à la nouvelle disposition -->
-      <TextField fx:id="searchField" layoutX="296.0" layoutY="105.0" prefHeight="26.0" prefWidth="777.0" promptText="Rechercher par nom d'utilisateur..." styleClass="text-field" onKeyReleased="#filtrerAvertissements" />
+      <TextField fx:id="searchField" layoutX="180.0" layoutY="65.0" onKeyReleased="#filtrerAvertissements" prefHeight="26.0" prefWidth="777.0" promptText="Rechercher par nom d'utilisateur..." styleClass="text-field" />
 
 
       <!-- ListView repositionné à droite -->
-      <ListView fx:id="avertissementListView" layoutX="296.0" layoutY="144.0" prefHeight="554.0" prefWidth="986.0">
+      <ListView fx:id="avertissementListView" layoutX="113.0" layoutY="103.0" prefHeight="511.0" prefWidth="1032.0">
          <!-- Le ListView sera configuré et peuplé depuis le contrôleur -->
       </ListView>
 
       <!-- Texte repositionné pour s'aligner avec la nouvelle barre de recherche -->
-      <Text layoutX="220.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste des Avertissements" textAlignment="CENTER" wrappingWidth="600.0" style="-fx-translate-y: 20;">
+      <Text layoutX="143.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-translate-y: 20;" text="Liste des Avertissements" textAlignment="CENTER" wrappingWidth="600.0">
          <font>
             <Font size="29.0" />
          </font>
       </Text>
 
       <!-- Pagination ajustée pour correspondre à la nouvelle position du ListView -->
-      <Pagination fx:id="pagination" currentPageIndex="0" layoutX="339.0" layoutY="700.0" pageCount="0" prefWidth="600" onMouseClicked="#handlePageChange"/>
+      <Pagination fx:id="pagination" currentPageIndex="0" layoutX="329.0" layoutY="624.0" onMouseClicked="#handlePageChange" pageCount="0" prefWidth="600" />
    </children>
    <!-- Footer -->
-   <HBox prefHeight="60.0" prefWidth="1000.0" style="-fx-background-color: #333; -fx-padding: 10px 20px;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.bottomAnchor="0.0">
-      <Text text="© 2023 Tous droits réservés" style="-fx-font-size: 16px; -fx-text-fill: white;"/>
-   </HBox>
+
 </AnchorPane>
