--- a/src/main/resources/Reclamation/ReclamationForm.fxml
+++ b/src/main/resources/Reclamation/ReclamationForm.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.image.ImageView?>
-<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.Reclamation.ReclamationFormController" spacing="20" alignment="TOP_CENTER" style="-fx-padding: 20; -fx-background-color: #f8f8f8;">
-    <Text text="Ajout Reclamation" style="-fx-font-weight: bold; -fx-font-size: 24px; -fx-fill: #2a2a2a;"/>
-    <TextField fx:id="subject" promptText="Subject" style="-fx-padding: 8;"/>
-    <TextArea fx:id="description" promptText="Description" prefHeight="100.0" style="-fx-padding: 8;"/>
-    <TextField fx:id="repertodusername" promptText="Reported Username" style="-fx-padding: 8;"/>
-    <ChoiceBox fx:id="typereclamation" prefWidth="150.0" style="-fx-padding: 5;"/>
+<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.Reclamation.ReclamationFormController" spacing="20" alignment="TOP_CENTER" style="-fx-padding: 20; -fx-background-color: #000000;">
+    <Text text="Add Reclamation" style="-fx-font-weight: bold; -fx-font-size: 24px; -fx-fill: #ffffff;"/>
+    <TextField fx:id="subject" promptText="Subject" style="-fx-padding: 8; -fx-background-color: #ffffff"/>
+    <TextArea fx:id="description" promptText="Description" prefHeight="100.0" style="-fx-padding: 8; -fx-background-color: #ffffff"/>
+    <TextField fx:id="repertodusername" promptText="Reported Username" style="-fx-padding: 8; -fx-background-color: #ffffff"/>
+    <ChoiceBox fx:id="typereclamation" prefWidth="150.0" style="-fx-padding: 5; -fx-background-color: #ffffff"/>
     <Button fx:id="screenshoot" text="Upload Screenshot" onAction="#ajoutScreenshoot" style="-fx-background-color: #4a90e2; -fx-text-fill: white; -fx-padding: 10;"/>
     <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="250.0" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);"/>
     <HBox spacing="15" alignment="CENTER">
