--- a/src/main/resources/dashb.fxml
+++ b/src/main/resources/dashb.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity"  style="-fx-background-color: black;" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="948.0" prefWidth="1335.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.dashbord">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="948.0" prefWidth="1335.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.dash" >
     <children>
-        <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="948.0" prefWidth="1335.0" styleClass="primary_color" stylesheets="style/style1.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+        <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="948.0" prefWidth="1335.0" styleClass="primary_color" stylesheets="/style1.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
             <left>
-                <VBox prefHeight="200.0" prefWidth="235.0" spacing="20.0" styleClass="secondary-color" stylesheets="style/style1.css" BorderPane.alignment="CENTER">
+                <VBox prefHeight="200.0" prefWidth="235.0" spacing="20.0" styleClass="secondary-color" stylesheets="/style1.css" BorderPane.alignment="CENTER">
                     <children>
                         <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -29,7 +29,7 @@
                         </ImageView>
                         <VBox prefHeight="182.0" prefWidth="235.0" spacing="10.0">
                             <children>
-                                <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0" styleClass="selected" stylesheets="style/style1.css">
+                                <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0" styleClass="selected" stylesheets="/style1.css">
                                     <children>
                                         <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
@@ -50,7 +50,7 @@
                                                 <Image url="https://static.vecteezy.com/ti/vecteur-libre/p3/9124661-jfx-logo-jfx-letter-jfx-letter-logo-design-initials-jfx-logo-linked-with-circle-and-uppercase-monogram-logo-jfx-typography-for-technology-business-and-real-marque-immobilier-vectoriel.jpg" />
                                             </image>
                                         </ImageView>
-                                        <Label  prefHeight="21.0" prefWidth="101.0" text="Explore" textFill="#a1a1a1">
+                                        <Label prefHeight="21.0" prefWidth="101.0" text="Explore" textFill="#a1a1a1">
                                             <font>
                                                 <Font name="System Bold" size="18.0" />
                                             </font>
@@ -98,7 +98,7 @@
                                         <Font name="System Bold" size="18.0" />
                                     </font>
                                 </Label>
-                                <Label prefHeight="40.0" prefWidth="192.0" text="Albums" textFill="#a1a1a1">
+                                <Label prefHeight="40.0" prefWidth="192.0" text="Reclamation" textFill="#a1a1a1" onMouseClicked="#showreclamation">
                                     <font>
                                         <Font name="System Bold" size="18.0" />
                                     </font>
@@ -127,7 +127,7 @@
                             </VBox.margin>
                         </Label>
                         <Pane prefHeight="12.0" prefWidth="235.0" VBox.vgrow="ALWAYS" />
-                        <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0" styleClass="top-border" stylesheets="style/style1.css">
+                        <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0" styleClass="top-border" stylesheets="/style1.css">
                             <children>
                                 <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -171,7 +171,7 @@
                                         </Button>
                                     </children>
                                 </HBox>
-                                <HBox alignment="CENTER" maxHeight="-Infinity" prefHeight="35.0" prefWidth="215.0" styleClass="search-container" stylesheets="style/style1.css">
+                                <HBox alignment="CENTER" maxHeight="-Infinity" prefHeight="35.0" prefWidth="215.0" styleClass="search-container" stylesheets="/style1.css">
                                     <children>
                                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
@@ -183,7 +183,7 @@
                                 </HBox>
                                 <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                                     <children /></Pane>
-                                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" styleClass="upgrade-button" stylesheets="style/style1.css" text="UPGRADE" textFill="WHITE" />
+                                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="120.0" styleClass="upgrade-button" stylesheets="style1.css" text="UPGRADE" textFill="WHITE" />
                                 <HBox alignment="CENTER" prefHeight="56.0" prefWidth="256.0" spacing="10.0">
                                     <children>
                                         <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
@@ -200,7 +200,7 @@
                                 </HBox>
                             </children>
                         </HBox>
-                        <HBox  prefHeight="730.0" prefWidth="1060.0">
+                        <HBox fx:id="vboxdash" prefHeight="730.0" prefWidth="1060.0">
 
                         </HBox>
                     </children>
