image path fixed in voucherdisplay-view.fxml

--- a/src/main/resources/displayVoucher-view.fxml
+++ b/src/main/resources/displayVoucher-view.fxml
@@ -37,7 +37,7 @@
                 <children>
                     <ImageView fitHeight="52.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@../../../images/edit.png" />
+                            <Image url="@images/edit.png" />
                         </image>
                     </ImageView>
                 </children>
@@ -46,7 +46,7 @@
                 <children>
                     <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@../../../images/poubelle.png" />
+                            <Image url="@images/poubelle.png" />
                         </image>
                     </ImageView>
                 </children>
@@ -55,7 +55,7 @@
                 <children>
                     <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@../../../images/fleche-fine-contour-vers-la-gauche.png" />
+                            <Image url="@images/fleche-fine-contour-vers-la-gauche.png" />
                         </image>
                     </ImageView>
                 </children>
