--- a/src/main/resources/Dashboard.fxml
+++ b/src/main/resources/Dashboard.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,14 +20,14 @@
             <children>
                 <Pane layoutX="30.0" layoutY="37.0" prefHeight="30.0" prefWidth="180.0" styleClass="labbtn">
                     <children>
-                        <Label alignment="CENTER" layoutX="41.0" layoutY="6.0" text="Upload New File" textFill="#2262c6">
+                        <Label alignment="CENTER" layoutX="41.0" layoutY="6.0" onMouseClicked="#ajoutsponsor" text="Add New Sponsor" textFill="#2262c6">
                             <font>
                                 <Font name="Berlin Sans FB" size="14.0" />
                             </font>
                         </Label>
                     </children>
                 </Pane>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="122.0" onMouseClicked="#showpost" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="122.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -34,7 +37,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label onMouseClicked="#showpost" text="posts" textFill="#a2bee8">
+                        <Label onMouseClicked="#showsponsor" text="posts" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
@@ -44,7 +47,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="154.0" onMouseClicked="#showUsers" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="154.0" onMouseClicked="#showspostgroup" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -54,7 +57,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Users" textFill="#a2bee8">
+                        <Label text="User" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
@@ -64,7 +67,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="185.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="185.0" onMouseClicked="#showsponsor" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -74,7 +77,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Shared with me" textFill="#a2bee8">
+                        <Label text="Sponsors List" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
@@ -84,7 +87,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="215.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="215.0" onMouseClicked="#showspostgroup" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -94,7 +97,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Recent" textFill="#a2bee8">
+                        <Label text="PostGroup List" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
@@ -104,7 +107,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="246.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="246.0" onMouseClicked="#showcomment" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -114,7 +117,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Starred" textFill="#a2bee8">
+                        <Label text="Comentairepost List" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
@@ -144,7 +147,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="307.0" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="307.0" onMouseClicked="#showQA" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -154,7 +157,7 @@
                                 <Insets right="10.0" />
                             </HBox.margin>
                         </ImageView>
-                        <Label text="Backups" textFill="#a2bee8">
+                        <Label text="Q/A" textFill="#a2bee8">
                             <font>
                                 <Font name="Cambria" size="14.0" />
                             </font>
@@ -201,6 +204,36 @@
                 <Image url="@images/icons8_slider_50px.png" />
             </image>
         </ImageView>
-        <VBox fx:id="vboxdash" layoutX="249.0" layoutY="123.0" prefHeight="691.0" prefWidth="1225.0" BorderPane.alignment="CENTER" />
+        <VBox fx:id="vboxdash" layoutX="249.0" layoutY="123.0" prefHeight="691.0" prefWidth="1225.0" BorderPane.alignment="CENTER">
+            <children>
+                <HBox prefHeight="338.0" prefWidth="1226.0">
+                    <children>
+
+                        <BarChart fx:id="statisticsChart" prefHeight="338.0" prefWidth="375.0">
+                            <xAxis>
+                                <CategoryAxis label="Type" />
+                            </xAxis>
+                            <yAxis>
+                                <NumberAxis label="Count" prefHeight="749.0" prefWidth="0.0" />
+                            </yAxis>
+                            <HBox.margin>
+                                <Insets left="10.0" />
+                            </HBox.margin>
+                            <!-- Ajoutez des séries de données si nécessaire -->
+                        </BarChart>
+                        <BarChart fx:id="barChart" prefHeight="338.0" prefWidth="440.0">
+                            <xAxis>
+                                <CategoryAxis label="Time Period" />
+                            </xAxis>
+                            <yAxis>
+                                <NumberAxis label="Number of Questions" />
+                            </yAxis>
+                        </BarChart>
+                    </children>
+                </HBox>
+            </children></VBox>
+
+
     </children>
+
 </AnchorPane>
