--- a/src/main/resources/statistique/statistiqueAvertissement.fxml
+++ b/src/main/resources/statistique/statistiqueAvertissement.fxml
@@ -13,7 +13,7 @@
     </padding>
     <children>
         <Label text="Statistiques des Avertissements" style="-fx-font-size: 24px; -fx-text-fill: #333;"/>
-        <BarChart fx:id="barChart">
+        <BarChart fx:id="barChart1">
             <xAxis>
                 <CategoryAxis label="Utilisateur"/>
             </xAxis>
